tests/should_fail/let_destructure_enum_pattern.nv
module fail
// Let destructure: enum pattern not allowed
enum Color { Red, Green, Blue }
let Red() = Color::Red()
